samples/_failures_safe/1761536257_6e2ba7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7dca6c1.c: In function ‘main’:
./samples/SAFE/__tmp_a7dca6c1.c:141:12: error: missing terminating " character
  141 |     printf("Decompressed: %s
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a7dca6c1.c:141:5: error: expected expression at end of input
  141 |     printf("Decompressed: %s
      |     ^~~~~~
./samples/SAFE/__tmp_a7dca6c1.c:141:5: error: expected declaration or statement at end of input
